# ec-tools

./: .gitignore  .pylintrc  Cargo.toml  README.md  environment.yml  pyproject.toml
.github/workflows/: doc.yml  lint.yml  test.yml
benchmark/: benchmark_numba.py  benchmark_python.py  benchmark_pythran.py  print_benchmark.py
benchmark/benchmark_rust/: rust_error_calc.py
benchmark/benchmark_rust/rust_implemention/: Cargo.toml  Export_Name.csv
benchmark/benchmark_rust/rust_implemention/results/: rs_benchmark_1000.csv  rs_benchmark_10000.csv  rs_benchmark_12500.csv  rs_benchmark_15000.csv  rs_benchmark_20000.csv  rs_benchmark_2500.csv  rs_benchmark_5000.csv  rs_benchmark_7500.csv  rs_benchmark_time.csv
benchmark/benchmark_rust/rust_implemention/src/: Semi_int.rs  main.rs
benchmark/results/: benchmark_numba.csv  benchmark_python.csv  benchmark_pythran.csv  benchmark_rust.csv
doc/: Makefile  README.md  conf.py  index.md  installation.md  refs.bib  semiint.md
doc/_templates/: breadcrumbs.html
docs/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  semiint.html
docs/_sources/: installation.md.txt
ec-tools/: helper.py  semi_integration.py
ec_tools/: electrolyte.py  helper.py  potential_reference.py  semi_integration.py
ec_tools/semi_integration_rs/: __init__.py  __init__.pyi
src/: lib.rs
src/ec_tools/: semi_integration.py
src/semi_integration_rs/: mod.rs
test/: create_accuracy_images.py  create_functionality_images.py  create_test_image.py  tex_figures.tex
