# inspired by the pylint repo
[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ec-tools"
license     = {text = "GPL-3.0-or-later"}
description = "tools to work with electrochemical data"
readme      = "README.md"

requires-python = ">=3.9.0"
dependencies    = [
    "numpy",
    "transonic",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]

[tool.setuptools]
license-files = ["LICENSE"]  # Keep in sync with setup.cfg
