# inspired by the pylint repo
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ec-tools"
license     = {text = "GPL-3.0-or-later"}
description = "tools to work with electrochemical data"
readme      = "README.md"

requires-python = ">=3.9.0"
dependencies    = [
    "numpy",
    "transonic",
]
version = "0.0.1"

[tool.setuptools]
license-files = ["LICENSE"]  # Keep in sync with setup.cfg

[tool.ruff]
lint.select = ["E", "F", "W", "B"]
lint.ignore = [
    "B905",
]
lint.fixable = ["E", "F", "W", "B"]
line-length = 115
